Shop generator ok (CSS to complete + Database to fill)

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -26,6 +26,7 @@ admin:
     item:
         name: Nom
         price: Prix
+        description: Description
     weapon:
         accuracy: Précision
         damage: Dégâts
