Added SpellLevelType OK

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -81,3 +81,7 @@ spell:
     type:
         ritual: Cérémonielle
         normal: Brute
+    level:
+        low: Débutant
+        mid: Intermédiaire
+        high: Avancé
