--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -58,6 +58,7 @@ admin:
         effect: Effet
         used_stats: Dés à lancer
         target: Cible
+        job: Classe
 
 Clothing: Vêtement
 Weapon: Arme
