Added description on skill in admin

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -59,6 +59,7 @@ admin:
         used_stats: Dés à lancer
         target: Cible
         job: Classe
+        description: Description
 
 Clothing: Vêtement
 Weapon: Arme
