Added nullable to usableCircumstances

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -60,6 +60,8 @@ admin:
         target: Cible
         job: Classe
         description: Description
+        usable_circumstances: Conditions
+
 
 Clothing: Vêtement
 Weapon: Arme
