Added spe_weapon to form

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -29,6 +29,7 @@ form:
         appearance: Apparence
         hometown: Ville de départ/Raison du départ
         notes: Notes
+        weapon: Arme préférée
 
 admin:
     spe:
